--- a/map/index.html
+++ b/map/index.html
@@ -7,7 +7,7 @@
      <!-- <script type="text/javascript" src='js/jquery.jcarousel.min.js'></script> -->
      <script type="text/javascript" src='js/jquery.easing.1.3.js'></script>
      <script type="text/javascript" src='js/jquery.bxSlider.min.js'></script>
-     <script type="text/javascript" src="http://www.raphaeljs.com/raphael.js"></script>
+     <script type="text/javascript" src="js/raphael-min.js"></script>
      <script type="text/javascript" charset='utf-8' src='js/russia.js'></script>
      <!-- <script type="text/javascript" charset='utf-8' src='js/RussiaObjects.js'></script> -->
 
