--- a/areamap/index.html
+++ b/areamap/index.html
@@ -9,21 +9,25 @@
 <body>
 
 <style type="text/css">
-    #popup {
+    #tooltip-popup {
         background: #ccc;
         display: none;
         position: absolute;
-        border: 1px solid #333;
+        border: 1px solid orange;
+        opacity: 0.9;
     }
 
-    .capt {
-        background: #bababa;
+    #tooltip-popup .capt {
+        font-weight: bold;
+        background: orange;
         padding:  2px 5px;
         color: #fff;
     }
 
-    .desc {
+    #tooltip-popup .desc {
+        background: yellow;
         padding:  5px;
+        color: #333;
     }
 </style>
 <div id="title">
@@ -39,7 +43,7 @@
     <area shape="poly" coords="384,24,449,24,473,0,406,0" href="techinfo.html" alt="Техническая информация" data-desc="Описание технической информации">
     <area shape="poly" coords="449,24,501,24,525,0,473,0" href="study.html" alt="Обучение" data-desc="Описание обучения">
     <area shape="poly" coords="501,24,560,24,583,0,525,0" href="work.html" alt="Работа" data-desc="Описание работы">
-    <area shape="poly" coords="560,24,615,24,639,0,585,0" href="misk.html" alt="Разное" data-desc='Описание разного'>
+    <area shape="poly" coords="560,24,615,24,639,0,585,0" href="misk.html" alt="Разное" data-capt='test' data-desc='Описание разного'>
 </map>
 </p>
 
@@ -51,25 +55,30 @@
         };
 
         var popup = $('<div>',{
-            id: 'popup'
+            id: 'tooltip-popup'
         });
         $('<div>').addClass('capt').html(opts.caption).appendTo(popup);
         $('<div>').addClass('desc').html(opts.description).appendTo(popup);
         popup.appendTo(document.body);
 
         var self = $(this);
+        self.mouseenter(function(){
+            popup.stop(true, true).fadeIn(200);
+        });
+        
         self.mousemove(function(evt) {
             //console.log(evt);
-            popup.find('.desc').html($(this).attr('data-desc'));
+            popup.find('.desc').html( $(this).attr('data-desc') );
+            popup.find('.capt').html( $(this).attr('data-capt') );
             popup.css({
                 'display': 'inline-block',
-                'top': evt.clientY + 20,
-                'left': evt.clientX + 20
+                'top': evt.clientY + 10,
+                'left': evt.clientX + 10
             });
         });
 
         self.mouseleave(function(evt) {
-            popup.hide();
+            popup.stop(true, true).fadeOut(200);
         });
     }
 </script>
