--- a/fb/index.html
+++ b/fb/index.html
@@ -3,60 +3,22 @@
 <head>
     <title></title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js'></script>
     <script type="text/javascript" src='fancybox/jquery.fancybox-1.3.4.pack.js'></script>
     <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/fb-style.css" type="text/css" media="screen">
 </head>
 <body>
 
-<style type="text/css">
-    * {
-        padding: 0;
-        margin: 0;
-    }
-    .playDiv {
-        background: url('img/play1.png') no-repeat;
-        width: 230px;
-        height: 160px;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
 
-    .play {
-        text-decoration: none;
-        cursor: pointer;
-        display: inline-block;
-    }
 
-    .play:hover {
-        text-decoration: none;
-    }
-
-    .play > div {
-        position: relative;
-        zoom: 1;
-        *display: inline;
-    }
-
-    .play img {
-        border: none;
-        width: 230px;
-        height: 170px;
-        top: 0;
-        left: 0;
-    }
-
-</style>
-
-<a href="#" class='play'>
+<a href="http://vimeo.com/moogaloop.swf?clip_id=31788199" class='play'>
     <div>
         <img src="img/stop_01.jpg">
     </div>
 </a>
 
 
-<a href="#" class='play'>
+<a href="http://www.youtube.com/v/N6DspdcO4HU?version=3" class='play'>
     <div>
         <img src="img/stop_01.jpg">
     </div>
@@ -83,7 +45,7 @@
 		'transitionOut'	: 'elastic',
 		'width'			: 720,
 		'height'		: 576,
-		'href'			: 'http://vimeo.com/moogaloop.swf?clip_id=31788199',
+		//'href'			: 'http://vimeo.com/moogaloop.swf?clip_id=' + $(this).attr('href').replace('#vimeo-',''),
 		'type'			: 'swf'
 	});
 
