github links added

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/m.js"></script>
 
 </head>
 <body>
@@ -87,6 +88,7 @@
                     <h3>Ссылки</h3>
                     <a href="https://chrome.google.com/webstore/detail/hmolgbmkhjnoekekdogckilbbedhdnoh">Установить,
                         почитать отзывы на Chrome store</a> <br/>
+                    <a href="https://github.com/Ndragomirov/tviggr">Посмотреть исходники на Github</a>
                 </div>
 
             </div>
