--- a/mathparser/index.html
+++ b/mathparser/index.html
@@ -31,6 +31,7 @@
     </style>
 </head>
 <body>
+
 <input type="text" id="math-expr" maxlength="200" placeholder="Введите мат. выражение, например: (x+5)^2/(y+4) <= 5 "
        autofocus="true">
 <button id="math-convert">convert</button>
@@ -43,17 +44,17 @@
 
 
 <h2>MathML код:</h2>
+
 <div id="mathmlcode">
 
 </div>
 
 <h2>Дерево разбора:</h2>
-
-<script type="text/javascript" src="parser.js"></script>
 <script type="text/javascript"
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/javascript" src="lib/d3.js"></script>
 <script type="text/javascript" src="d3test.js"></script>
+<script type="text/javascript" src="deixtra.js"></script>
 
 </body>
 </html>
