--- a/mathparser/index.html
+++ b/mathparser/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <meta charset="utf-8">
     <style type="text/css">
         html, body {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -32,6 +33,7 @@
 </head>
 <body>
 
+<h1>Преобразование текстовых математических выражений в графическую форму</h1>
 <input type="text" id="math-expr" maxlength="200" placeholder="Введите мат. выражение, например: (x+5)^2/(y+4) <= 5 "
        autofocus="true">
 <button id="math-convert">convert</button>
