--- a/mathparser/index.html
+++ b/mathparser/index.html
@@ -52,8 +52,7 @@
 </div>
 
 <h2>Дерево разбора:</h2>
-<script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="lib/mjax.js"></script>
 <script type="text/javascript" src="lib/d3.js"></script>
 <script type="text/javascript" src="d3test.js"></script>
 <script type="text/javascript" src="deixtra.js"></script>
