--- a/twitch.html
+++ b/twitch.html
@@ -5,5 +5,22 @@
 </head>
 <body> 
 Hello!
+If you see this page for too long time, then click this link <a id="redirect-url" href='#'>Click here</a> 
+<script>
+  var url = window.location.href;
+  var params = '?';
+  var index = url.indexOf(params);
+  if (index > -1) {
+    params = url.substring(index);
+  }
+  
+  // Also append the current URL to the params
+  params += '&from=' + encodeURIComponent(url);
+  
+  // Redirect back to the extension itself so that we have priveledged
+  // access again
+  var redirect = 'chrome-extension://nlmbdmpjmlijibeockamioakdpmhjnpk/oauth2/oauth2.html';
+  document.querySelector("#redirect-url").href = redirect;
+</script>
 </body>
 </html>
