--- a/twitch.html
+++ b/twitch.html
@@ -19,7 +19,7 @@ If you see this page for too long time, then click this link <a id="redirect-url
   
   // Redirect back to the extension itself so that we have priveledged
   // access again
-  var redirect = 'chrome-extension://nlmbdmpjmlijibeockamioakdpmhjnpk/oauth2/oauth2.html';
+  var redirect = 'chrome-extension://nlmbdmpjmlijibeockamioakdpmhjnpk/oauth2/oauth2.html' + params;
   document.querySelector("#redirect-url").href = redirect;
 </script>
 </body>
