--- a/twitch.html
+++ b/twitch.html
@@ -5,7 +5,7 @@
 </head>
 <body> 
 Hello!
-If you see this page for too long time, then click this link <a id="redirect-url" href='#'>Click here</a> 
+<a id="redirect-url" href='#'>Click here!</a> 
 <script>
   var url = window.location.href;
   var params = '?';
