--- a/twitch.html
+++ b/twitch.html
@@ -19,10 +19,10 @@ Hello!
   
   // Redirect back to the extension itself so that we have priveledged
   // access again
-  var redirect = 'chrome-extension://nlmbdmpjmlijibeockamioakdpmhjnpk/oauth2/oauth2.html' + params;
-  document.querySelector("#redirect-url").href = redirect;
+  //var redirect = 'chrome-extension://nlmbdmpjmlijibeockamioakdpmhjnpk/oauth2/oauth2.html' + params;
+  //document.querySelector("#redirect-url").href = redirect;
   
-  window.location.replace(redirect);
+  //window.location.replace(redirect);
 </script>
 </body>
 </html>
